<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activites.MainActivity"
    android:background="@drawable/ud9js">

    <EditText
        android:id="@+id/ph_num_txt"
        android:layout_width="283dp"
        android:layout_height="50dp"
        android:ems="10"
        android:fontFamily="@font/abril_fatface"
        android:hint="@string/enter_phone_number"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.615" />

    <EditText
        android:id="@+id/email_txt"
        android:layout_width="283dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/abril_fatface"
        android:hint="@string/enter_email_address"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <EditText
        android:id="@+id/address_txt"
        android:layout_width="283dp"
        android:layout_height="50dp"
        android:ems="10"
        android:fontFamily="@font/abril_fatface"
        android:hint="@string/enter_your_address"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="316dp"
        android:layout_height="32dp"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/informaions_about_you"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157" />

    <EditText
        android:id="@+id/name_txt"
        android:layout_width="283dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/abril_fatface"
        android:hint="@string/enter_full_name"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.289" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="137dp"
        android:layout_height="64dp"
        android:fontFamily="@font/abril_fatface"
        android:onClick="nextOnClick"
        android:text="@string/next"
        android:textSize="18sp"
        app:backgroundTint="#5F6DB8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:strokeColor="#FFFFFF" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="328dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.771"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.823">

        <RadioButton
            android:id="@+id/female_ra"
            android:layout_width="106dp"
            android:layout_height="47dp"
            android:fontFamily="@font/abril_fatface"
            android:text="@string/female"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/male_ra"
            android:layout_width="106dp"
            android:layout_height="47dp"
            android:fontFamily="@font/abril_fatface"
            android:text="@string/male"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/hobbies_txt"
        android:layout_width="285dp"
        android:layout_height="53dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/abril_fatface"
        android:gravity="start|top"
        android:hint="@string/enter_your_hobbies"
        android:inputType="textMultiLine"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.722" />

</androidx.constraintlayout.widget.ConstraintLayout>